[package]
name = "rustyf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = "1.0.144"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0.91"
reqwest = "0.11.14"
tokio = "1.25.0"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
dotenv = "0.15.0"
wasm-logger = "0.2.0"
log = "0.4.17"
web-sys = "0.3.60"

